--- a/src/main/resource/index.html
+++ b/src/main/resource/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>X-Plane Map</title>
-<link rel="stylesheet" type="text/css" href="http://x-plane-map.fouc.net/map-1.1.css" media="all"/>
+<link rel="stylesheet" type="text/css" href="map.css" media="all"/>
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkS0sO3oxa5OOmH1ujaWYFLjKLOh6OSNw">
     </script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.js"></script>
@@ -48,7 +48,7 @@
 				$('#loading').html('Loading airport data (3MB file) ...');
 				
 				aptLayer.setStyle({
-					title: "Coucou",
+					title: "Ualter",
 					icon: {
 						strokeColor: "#ffffff",
 						path: google.maps.SymbolPath.CIRCLE
