--- a/src/main/resource/index.html
+++ b/src/main/resource/index.html
@@ -3,10 +3,10 @@
 <head>
 <title>X-Plane Map</title>
 <link rel="stylesheet" type="text/css" href="map.css" media="all"/>
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkS0sO3oxa5OOmH1ujaWYFLjKLOh6OSNw">
-    </script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkS0sO3oxa5OOmH1ujaWYFLjKLOh6OSNw"></script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.js"></script>
 <script type="text/javascript" src="map.js"></script>
+<script type="text/javascript" src="markerwithlabel.js"></script>
 </head>
 <body>
 	<div id="panel" class="bl">
