--- a/src/main/resource/index.html
+++ b/src/main/resource/index.html
@@ -9,31 +9,16 @@
 <script type="text/javascript" src="markerwithlabel.js"></script>
 </head>
 <body>
-	<div id="panel" class="bl">
-		<table id="planesTable">
-			<tr class="topRow">
-				<td title="Click to focus on this plane."><label><input type="radio" id="nofocus" name="plane"></label></td>
-				<td title="Double-click to rename.">Name</td>
-				<td title="Click to show or hide trace.">Trace</td>
-				<td title="Click to reset the plane's trace.">Clear</td>
-				<td title="Click to remove the plane.">Rmv</td>
-			</tr>
-			<tr class="planeRow" data-ip="ip">
-				<td></td>
-				<td>No plane yet</td>
-				<td></td>
-				<td></td>
-				<td></td>
-			</tr>
-		</table>
-		<p id="loading"></p>
-		<span id="bottom-note">External Moving Map v1.1<br>Developed by <a href="mailto:foucauld.degeorges@gmail.com">Foucauld Degeorges</a> and released for free on <a href="http://forums.x-plane.org/index.php?app=downloads&showfile=25569">x-plane.org</a></span>
+	<div id="map-canvas"></div>
+	<div id="flightplan-button">Flight Plan (F)</div>
+	<div id="panel-fp">
+	    <div>
+			<textarea rows="10" cols="78"></textarea>
+		</div>
 	</div>
-	<div id="map-canvas-wrapper">
-		<div id="map-canvas"></div>
-		<div id="panel-button">Show panel (Tab)</div>
+	<!-- <div id="map-canvas-wrapper">
 		<div id="navaids-button">Show navaids (N)</div>
-	</div>
+	</div> -->
 	<div id="errorBox">
 	</div>
 	<script type="text/javascript">
