--- a/src/main/resource/index.html
+++ b/src/main/resource/index.html
@@ -14,7 +14,7 @@
 	<div id="flightplan-help">Fill the route with all the waypoints separated by spaces. This waypoints might be VOR, FIX or Airports.</div>
 	<div id="panel-fp">
 	    <div>
-			<textarea id="boxFlightPlan" rows="6" cols="61"></textarea>
+			<textarea id="boxFlightPlan" rows="6" cols="61" placeholder="Enter your fligth plan..."></textarea>
 		</div>
 	</div>
 	<div id="errorBox"></div>
