--- a/src/main/resource/index.html
+++ b/src/main/resource/index.html
@@ -10,7 +10,8 @@
 <script type="text/javascript" src="markerwithlabel.js"></script>
 </head>
 <body>
-	<div id="map-canvas"></div>
+	<div id="map-canvas">
+	</div>
 	<div id="flightplan-button">Flight Plan (Shift)</div>
 	<div id="flightplan-help">Fill the route with all the waypoints separated by spaces. This waypoints might be VOR, FIX or Airports.</div>
 	<div id="panel-fp">
