--- a/src/main/resource/index.html
+++ b/src/main/resource/index.html
@@ -8,6 +8,7 @@
 <script type="text/javascript" src="http://www.google.com/jsapi"></script>
 <script type="text/javascript" src="map.js"></script>
 <script type="text/javascript" src="markerwithlabel.js"></script>
+<script type="text/javascript" src="numeral.min.js"></script>
 </head>
 <body>
 	<div id="map-canvas">
@@ -17,7 +18,7 @@
 	<div id="panel-fp">
 	    <div>
 			<!-- <textarea id="boxFlightPlan" rows="6" cols="61" placeholder="Enter your fligth plan...">SBSP TBE ANISE LODOG XOKIX VUREP SBRJ</textarea> -->
-			<textarea id="boxFlightPlan" rows="6" cols="61" placeholder="Enter your fligth plan...">SBSP SAT LODOG XOKIX VUREP SBRJ</textarea>
+			<textarea id="boxFlightPlan" rows="6" cols="61" placeholder="Enter your fligth plan...">SBSP SAT SCP LODOG XOKIX VUREP SBRJ</textarea>
 			<!-- <textarea id="boxFlightPlan" rows="6" cols="61" placeholder="Enter your fligth plan...">KSEA EDDG</textarea> -->
 			<!-- <textarea id="boxFlightPlan" rows="6" cols="61" placeholder="Enter your fligth plan...">KSEA LODOG SBRJ</textarea> -->
 		</div>
