--- a/src/main/resource/index.html
+++ b/src/main/resource/index.html
@@ -14,6 +14,9 @@
 	<div id="map-canvas">
 	</div>
 	<div id="flightplan-button">Flight Plan (Tab)</div>
+	<div id="plane-panel">
+		<div id="followThePlane-button" class="down">Chase Airplane</div>
+	</div>
 	<div id="flightplan-help">Fill the route with all the waypoints separated by spaces. This waypoints might be VOR, FIX or Airports.</div>
 	<div id="panel-fp">
 	    <div>
@@ -54,6 +57,7 @@
 		
 		$('#navaids-button').click(showNavaids);
 		$('#flightplan-button').click(toggleFlightPanel);
+		$('#followThePlane-button').click(toggleChaseAirplane);
 		</script>
 </body>
 </html>
