--- a/src/main/resource/index.html
+++ b/src/main/resource/index.html
@@ -13,7 +13,7 @@
 <body>
 	<div id="map-canvas">
 	</div>
-	<div id="flightplan-button">Flight Plan (Tab)</div>
+	<div id="flightplan-button">Flight Plan (')</div>
 	<div id="plane-panel">
 		<div id="followThePlane-button" class="down">Chase Airplane</div>
 	</div>
