--- a/src/main/resource/index.html
+++ b/src/main/resource/index.html
@@ -47,6 +47,14 @@
 			<!-- <textarea id="boxFlightPlan" rows="6" cols="64" placeholder="Enter your fligth plan...">KSEA EDDG</textarea> -->
 			<!-- <textarea id="boxFlightPlan" rows="6" cols="64" placeholder="Enter your fligth plan...">KSEA LODOG SBRJ</textarea> -->
 		</div>
+		<div id='flightplan-loading'>
+		  <table cellspacing='0' cellpadding='0'>
+		      <tr>
+		          <td valign='middle'><img src="loading.gif"/></td>
+		          <td valign='middle'>Loading Flight Plan...</td>
+		      </tr>
+		  </table>
+		</div>
 	</div>
 	<div id="errorBox"></div>
 	<script type="text/javascript">
