--- a/src/main/resource/index.html
+++ b/src/main/resource/index.html
@@ -46,7 +46,7 @@
 	<div id="panel-fp">
 	    <div>
 			<!-- <textarea id="boxFlightPlan" rows="6" cols="64" placeholder="Enter your fligth plan...">SBSP SAT LODOG XOKIX SBRJ</textarea> -->
-			<textarea id="boxFlightPlan" rows="6" cols="64" placeholder="Enter your fligth plan...">SBRJ CXI UBNEK EPGIP ESORU UGPOP EKIDI VULET VUSMA IB SBSP</textarea>
+			<textarea id="boxFlightPlan" rows="6" cols="64" placeholder="Enter your fligth plan..."></textarea>
 		</div>
 		<div id='flightplan-loading'>
 		  <table cellspacing='0' cellpadding='0' border=0>
