--- a/src/main/resource/index.html
+++ b/src/main/resource/index.html
@@ -16,7 +16,7 @@
 	</div>
 	<div id="flightplan-button">Flight Plan (')</div>
 	<div id="plane-panel">
-		<div id="followThePlane-button" class="down">Chase Airplane</div>
+		<div id="followThePlane-button" class="up">Chase Airplane</div>
 	</div>
 	<div id="labelRoute-button">Route label</div>
 	<div id="labelWaypoint-button">Waypoint label</div>
